Finished rendering contact form and fixed css overflow issue

--- a/src/Routes/Home/Home.styles.scss
+++ b/src/Routes/Home/Home.styles.scss
@@ -1,5 +1,5 @@
-.contact-container {
+.home-container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  width: 400px;
 }
