--- a/src/componenets/Modal/Modal.styles.css
+++ b/src/componenets/Modal/Modal.styles.css
@@ -1,16 +1,19 @@
 .modal-backdrop,
 .overlay {
-  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
   z-index: 0;
+  overflow: hidden;
 }
 
 .modal-wrapper {
-  position: fixed;
+  position: absolute;
   margin: auto;
   top: 0;
   bottom: 0;
@@ -19,9 +22,10 @@
   background: #ffffff;
   padding: 16px 16px;
   border-radius: 8px;
-  width: 500px;
-  height: 600px;
+  width: 475px;
+  height: 650px;
   z-index: 10;
+  overflow: hidden;
 }
 
 .modal-header {
